// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PickedTooltip /> Should render tooltip 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tooltip interactive"
        style="padding: 10px; border-radius: 5px; color: black; max-height: 30%; background-color: whitesmoke; position: relative; min-width: 240px; max-width: 10%; block-size: fit-content; overflow: scroll; box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22); overflow-x: hidden; pointer-events: all; z-index: 9; font-size: 12px; left: 0px; top: 0px;"
      >
        <div>
          <h5>
            name1
          </h5>
          <div>
            Description: 
            description
          </div>
        </div>
        <div>
          <h5>
            name2
          </h5>
          <div>
            Description: 
            description
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tooltip interactive"
      style="padding: 10px; border-radius: 5px; color: black; max-height: 30%; background-color: whitesmoke; position: relative; min-width: 240px; max-width: 10%; block-size: fit-content; overflow: scroll; box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22); overflow-x: hidden; pointer-events: all; z-index: 9; font-size: 12px; left: 0px; top: 0px;"
    >
      <div>
        <h5>
          name1
        </h5>
        <div>
          Description: 
          description
        </div>
      </div>
      <div>
        <h5>
          name2
        </h5>
        <div>
          Description: 
          description
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<PickedTooltip /> Should render tooltip without 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tooltip interactive"
        style="padding: 10px; border-radius: 5px; color: black; max-height: 30%; background-color: whitesmoke; position: relative; min-width: 240px; max-width: 10%; block-size: fit-content; overflow: scroll; box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22); overflow-x: hidden; pointer-events: all; z-index: 9; font-size: 12px; left: 0px; top: 0px;"
      >
        <div>
          <h5>
            name
          </h5>
          <div>
            Description: 
            unknown
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tooltip interactive"
      style="padding: 10px; border-radius: 5px; color: black; max-height: 30%; background-color: whitesmoke; position: relative; min-width: 240px; max-width: 10%; block-size: fit-content; overflow: scroll; box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22); overflow-x: hidden; pointer-events: all; z-index: 9; font-size: 12px; left: 0px; top: 0px;"
    >
      <div>
        <h5>
          name
        </h5>
        <div>
          Description: 
          unknown
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
